--- a/text/regional_comparison.Rmd
+++ b/text/regional_comparison.Rmd
@@ -11,10 +11,15 @@ options(scipen=9999) # remove scientific notation
 
 knitr::opts_chunk$set(echo = FALSE, message=F, warning=F)
 ```
+Housekeeping/ long-term: code is in geoduck_exploration R project. see regional_age_growth_cc.R and regional_catccurve.R
+
 ## Regional groupings
 Geoduck age collections were aggregated into regional groupings based on geography, environment, and present of predators (specifically the sea otter).  Group 1 includes the Nakat Inlet, Vallenar Bay, and Vegas/Hotspur Islands, which are all absent of sea otters.  Group 2 includes Cone Island North, East San Fernando, Tlevak Strait, Warren/Kosciusko Islands, and Sitka (Biorka and Taigud).  For purposes of this document Group 1 will be referred to as the "absent" group and Group 2 will be "present".  (we can change this later if needed - this is just a draft)
 
 ## Age Frequency
+Histogram by group - with raw counts and counts weighted by population size
+![](../figures/histogram_count_both.png)
+
 Histograms - unweighted
 
 Histrograms - weigthed by populations size
