--- a/text/output for manuscript_2017.Rmd
+++ b/text/output for manuscript_2017.Rmd
@@ -21,7 +21,44 @@ knitr::opts_chunk$set(echo = FALSE, message=F, warning=F)
 Housekeeping/ long-term: code is in geoduck_exploration R project. See regional_age_growth_cc.R and regional_catchcurve.R
 
 ## Area specific trends
+```{r data load, echo = FALSE, message = FALSE, warning=FALSE}
+## Load data -------------------------------------------------------
+dat <- read.csv("./data/12_14_geoduck_all.csv")
+weight_pop <- read.csv("./data/GeoduckAgeStudyWeighting.csv")
 
+weight_pop %>%  filter(area != "Biorka/Legma Islands") %>% 
+  filter(area != "Taigud/Kolosh Islands") -> weight_pop #remove sitka area since they are grouped under "sitka" now
+weight_pop %>% mutate(wt_each = popsize_wshow/(sum(popsize_wshow))) %>% 
+  select(-AgeStudyWeighting)-> weight_pop
+
+# need to edit data to make sitka one sample - so group Biorka/Legma Islands and Taigud/Kolosh Islands together
+unique(dat$ADFG_Fishery.Area)
+dat %>% mutate(area1 = as.character(ADFG_Fishery.Area))  %>% 
+        mutate(area = ifelse(area1 == "Biorka/Legma Islands", "Sitka", 
+                             ifelse(area1 == "Taigud/Kolosh Islands", 
+                                    "Sitka", area1))) %>% 
+        select( -area1) -> dat1
+  
+# full data set with weigtings
+dat1 %>% left_join(weight_pop) -> dat2 # raw data
+# summarized by area, age with weigthing
+dat2 %>% group_by(area, Age_2012) %>% 
+  summarise(n = n())  -> dat2_by.area # counts by age for each area 
+dat2_by.area %>% left_join(weight_pop) %>% mutate(n_wt = n*wt_each) -> dat_wt_by.area # counts by age/area with weighting
+
+## weighting counts ------------------
+dat1 %>% group_by(area) %>% summarise(N_samp = n()) ->total.n.area  # number sampled in each area
+dat_wt_by.area %>% left_join(total.n.area) %>% 
+  mutate(prop = n/N_samp, n_corrected = prop*popsize_wshow) -> dat_wt_by.area2
+# n_corrected is counts using population size weighting.  n_wt is proportion using same weighting
+# this is just a scale peference
+```
+
+# all areas unweighted
+```{r area histograms }
+ggplot(dat2, aes(Age_2012, fill = otter.status)) + geom_histogram(binwidth = 1.0, alpha = 0.5, position = "dodge") +
+  facet_grid( area ~.)
+```
 ### Means, histograms (weighted or unweighted???), growth?
 
 
