--- a/text/output for manuscript_2017.Rmd
+++ b/text/output for manuscript_2017.Rmd
@@ -60,7 +60,7 @@ dat_wt_by.area2 %>% filter(otter.status == "present") -> present_wt
 dat_wt_by.area2 %>% filter(otter.status == "absent") -> absent_wt
 ```
 
-### all areas unweighted
+### Unweighted histograms
 ```{r area histograms }
 ggplot(dat2, aes(Age_2012, fill = otter.status)) + geom_histogram(binwidth = 1.0, alpha = 0.5, position = "dodge") +
   facet_grid( area ~.)
@@ -84,6 +84,16 @@ dat_wt_by.area2 %>% group_by(area) %>% summarise(mean = weighted.mean(Age_2012, 
 
 ## Regional groupings
 Geoduck age collections were aggregated into regional groupings based on geography, environment, and present of predators (specifically the sea otter).  Group 1 includes the Nakat Inlet, Vallenar Bay, and Vegas/Hotspur Islands, which are all absent of sea otters (total sample size = 611).  Group 2 includes Cone Island North, East San Fernando, Tlevak Strait, Warren/Kosciusko Islands, and Sitka (Biorka and Taigud), which all have sea otters present (total sample size = 1048).  For purposes of this document Group 1 will be referred to as the "absent" group and Group 2 will be "present".  (we can change this later if needed - this is just a draft)
+
+### Weighted mean age 
+```{r mean age by group}
+# use dat_wt_by.area2  weight mean age by n_corrected or n_wt(weight)
+dat_wt_by.area2 %>% group_by(otter.status) %>% summarise(mean = weighted.mean(Age_2012, n_wt),
+                       SE = (wt.sd(Age_2012, n_wt)/(sqrt(sum(!is.na(Age_2012))))), 
+                       MIN = min(Age_2012, na.rm = TRUE), 
+                       MAX = max(Age_2012, na.rm = TRUE), 
+                       n = sum(n))
+```
 
 
 
