--- a/text/output for manuscript_2017.Rmd
+++ b/text/output for manuscript_2017.Rmd
@@ -14,6 +14,7 @@ library(weights)
 library(nlstools)
 library(AICcmodavg)
 library(ggplot2)
+library(SDMTools)
 options(scipen=9999) # remove scientific notation
 
 knitr::opts_chunk$set(echo = FALSE, message=F, warning=F)
@@ -61,13 +62,13 @@ dat_wt_by.area2 %>% filter(otter.status == "absent") -> absent_wt
 ```
 
 ### Unweighted histograms
-```{r area histograms }
+```{r area histograms, warning =FALSE}
 ggplot(dat2, aes(Age_2012, fill = otter.status)) + geom_histogram(binwidth = 1.0, alpha = 0.5, position = "dodge") +
   facet_grid( area ~.)
 ```
 
 ### Weighted mean age 
-```{r area means }
+```{r area means,warning =FALSE }
 # use dat_wt_by.area2  weight mean age by n_corrected or n_wt(weight)
 dat_wt_by.area2 %>% group_by(area) %>% summarise(mean = weighted.mean(Age_2012, n_wt), 
                SE = (wt.sd(Age_2012, n_wt)/(sqrt(sum(!is.na(Age_2012))))), 
@@ -84,7 +85,7 @@ dat_wt_by.area2 %>% group_by(area) %>% summarise(mean = weighted.mean(Age_2012, 
 Geoduck age collections were aggregated into regional groupings based on geography, environment, and present of predators (specifically the sea otter).  Group 1 includes the Nakat Inlet, Vallenar Bay, and Vegas/Hotspur Islands, which are all absent of sea otters (total sample size = 611).  Group 2 includes Cone Island North, East San Fernando, Tlevak Strait, Warren/Kosciusko Islands, and Sitka (Biorka and Taigud), which all have sea otters present (total sample size = 1048).  For purposes of this document Group 1 will be referred to as the "absent" group and Group 2 will be "present".  (we can change this later if needed - this is just a draft)
 
 ### Weighted mean age 
-```{r mean age by group}
+```{r mean age by group, warning =FALSE}
 # use dat_wt_by.area2  weight mean age by n_corrected or n_wt(weight)
 dat_wt_by.area2 %>% group_by(otter.status) %>% summarise(mean = weighted.mean(Age_2012, n_wt),
                        SE = (wt.sd(Age_2012, n_wt)/(sqrt(sum(!is.na(Age_2012))))), 
@@ -96,7 +97,7 @@ dat_wt_by.area2 %>% group_by(otter.status) %>% summarise(mean = weighted.mean(Ag
 ## Age Composition Similar?
 More exploration is neeeded for this analysis but a simple ks test suggests they are not from the same distribution. I'm currently researching other tests/ analyses to look at this, and i also think I should bin the ages and redo this test just for sensitivity.  (Code ee is present and ff is absent.)
 
-```{r}
+```{r kstest, warning =FALSE}
 present_dist <- data.frame(x = rep(present_wt$Age_2012, present_wt$n_corrected), z = rep(present_wt$otter.status, present_wt$n_corrected))
 
 absent_dist <- data.frame(x = rep(absent_wt$Age_2012, absent_wt$n_corrected), z = rep(absent_wt$otter.status, absent_wt$n_corrected))
@@ -108,7 +109,7 @@ present_dist %>% bind_rows(absent_dist) -> all_n_corrected # expanded counts com
 ```
 
 ### Weighted histograms
-```{r area histograms }
+```{r histograms, warning =FALSE }
 # weighted histograms for each group
 ggplot(all_n_corrected, aes(x=x, fill = z))+
   geom_histogram(binwidth = 1.0, alpha =0.5, position = "dodge")+ylab("expanded count (x10000s)")+
