present group graph of log weighted age frequency by age

--- a/text/output for manuscript_2017.Rmd
+++ b/text/output for manuscript_2017.Rmd
@@ -122,4 +122,10 @@ ggplot(all_n_corrected, aes(x=x, fill=z)) +
 
 ## Natural mortality estimates by group
 
+```{r catch curve}
+present_wt %>% group_by(otter.status, Age_2012) %>% summarise( count = sum(n), Wcount = sum(n_corrected)) -> present_freq
+present_freq %>% mutate(logcount = log(count), logWcount = log(Wcount)) -> present_freq
 
+ggplot(present_freq, aes(Age_2012, Wcount)) +geom_point()
+
+```
