updates to data loaded

--- a/text/2020 summary results_write up.Rmd
+++ b/text/2020 summary results_write up.Rmd
@@ -22,10 +22,10 @@ Housekeeping/ long-term: code is in geoduck_exploration R project. See regional_
 dat <- read.csv("../data/12_14_geoduck_all.csv")
 weight_pop <- read.csv("../data/GeoduckAgeStudyWeighting.csv")
 
-weight_pop %>%  filter(area != "Biorka/Legma Islands") %>% 
-  filter(area != "Taigud/Kolosh Islands") -> weight_pop #remove sitka area since they are grouped under "sitka" now
-weight_pop %>% mutate(wt_each = popsize_wshow/(sum(popsize_wshow))) %>% 
-  select(-AgeStudyWeighting)-> weight_pop
+weight_pop %>% 
+  mutate(wt_each = popsize_wshow/(sum(popsize_wshow))) %>% 
+  select(-AgeStudyWeighting) %>% 
+  mutate(waters = ifelse(otter.status == "present", "outside", "inside")) -> weight_pop
 
 # need to edit data to make sitka one sample - so group Biorka/Legma Islands and Taigud/Kolosh Islands together
 #unique(dat$ADFG_Fishery.Area)
