--- a/text/2020 summary results_write up.Rmd
+++ b/text/2020 summary results_write up.Rmd
@@ -91,12 +91,45 @@ knitr::include_graphics("../figures/raw_density_pre_abs.png", dpi = 100)
 dat2 %>% filter(!is.na (Valve.Length.mm)) -> dat2_rawL
 vbTypical.t0 <- Valve.Length.mm~(Linf*(1-exp(-K*(Age_2012)))) # the equation to fit
 fit2 <- nls(vbTypical.t0, data=dat2_rawL, start= list(Linf=142, K=0.58))
-fitPlot(fit2, xlab="Age", ylab="Valve Length (mm)", main="", col.mdl="red") 
+#fitPlot(fit2, xlab="Age", ylab="Valve Length (mm)", main="", col.mdl="red") 
 #### ----save this age-length plot 
 #fit2
 summary(fit2)
 
 ```
 
+```{r, fig.cap = "Length-age relatioship for all Southeast Alaska samples, color coded by inside/outside waters groupings", out.width= "500px"}
+knitr::include_graphics("../figures/Len_age_all_colors_bootfit.png", dpi = 100)
+```
+
+```{r, fig.cap = "Length-age relatioship for all Southeast Alaska samples and by inside/outside waters groupings. Model fit cooresponds to grouping color (solid line), bootstrap lines (dashed) only shown for all of Southeast", out.width= "500px"}
+knitr::include_graphics("../figures/Len_age_all_colors_bootfit_all_FITS.png", dpi = 100)
+```
+
+### Outside waters {-}
+
+```{r, }
+present_raw %>% filter(!is.na (Valve.Length.mm)) -> present_rawL # needed to remove rows without length measurements
+vbTypical.t0 <- Valve.Length.mm~(Linf*(1-exp(-K*(Age_2012)))) # the equation to fit
+fit2p <- nls(vbTypical.t0, data=present_rawL, start= list(Linf=142, K=0.58))
+#fitPlot(fit2, xlab="Age", ylab="Valve Length (mm)", main="", col.mdl="red") 
+#### ----save this age-length plot 
+#fit2
+summary(fit2p)
+
+```
+
+### Inside water {-}
+
+```{r, }
+absent_raw %>% filter(!is.na (Valve.Length.mm)) -> absent_rawL # needed to remove rows without length measurements
+vbTypical.t0 <- Valve.Length.mm~(Linf*(1-exp(-K*(Age_2012)))) # the equation to fit
+fit2a <- nls(vbTypical.t0, data=absent_rawL, start= list(Linf=131, K=0.44))
+#fitPlot(fit2a, xlab="Age", ylab="Valve Length (mm)", main="", col.mdl="red") 
+#### ----save this age-length plot 
+#fit2a
+summary(fit2a)
+
+```
 
 
